# negi-ms-cpp

./: .clang-format  .clang-tidy  .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  build.sh  make.sh  vcpkg.json  watcher.cpp
.devcontainer/: Dockerfile  devcontainer.json
docs/: plan.md
src/clerk/: main.cpp
src/clerk-fe/: index.html  package.json  pnpm-lock.yaml
src/clerk-fe/src/assets/: main.css
src/clerk-fe/src/router/: index.ts
src/clerk-fe/src/views/: FormView.vue
src/google-oauth2/: Cargo.toml
src/google-oauth2/src/: main.rs
src/lib/: external.hpp  network.hpp  sheet.hpp
src/lib/network/: http_server.cpp  http_server.hpp  requester.cpp  requester.hpp
src/lib/sheet/: client.cpp  client.hpp
src/marksman/: categorizer.cpp  categorizer.hpp  duplifinder.cpp  duplifinder.hpp  main.cpp
src/reporter/: discord.cpp  discord.hpp  main.cpp
test/: categorizer.cpp  duplifinder.cpp  sheet.cpp  test_utils.hpp
